# yarp-devices-haptic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: CONTRIBUTING.md
client/: CMakeLists.txt  geomagicClient.cpp  geomagicClient.h  geomagicclient.ini  hapticdeviceClient.cpp  hapticdeviceClient.h  hapticdeviceclient.ini
cmake/: geomagicHelpers.cmake  hapticdeviceHelpers.cmake
common/: common.h
conf/: geomagic.xml
deliveries/geomagic-phase-1/src/: driver.cpp
deliveries/geomagic-phase-2/conf/: geomagic.xml
deliveries/geomagic-phase-2/driver/: geomagicDriver.h
deliveries/templates/phase-2/driver/: geomagicDriver.cpp  geomagicDriver.h
driver/: CMakeLists.txt  geomagicDriver.cpp  geomagicDriver.h
drivers/: CMakeLists.txt
drivers/geomagic/: CMakeLists.txt  geomagicDriver.cpp  geomagicDriver.h  geomagicdriver.ini
examples/: README.md
examples/teleop-icub/: CMakeLists.txt  main.cpp
geomagic-phase-1/: CMakeLists.txt
geomagic-phase-1/include/geomagic/: geomagic.h
geomagic-phase-1/src/: geomagic.cpp
geomagic-phase-2/driver/: geomagicDriver.cpp  geomagicDriver.h
geomagic-phase-2/wrapper/: CMakeLists.txt
interface/: IGeomagic.h
templates/phase-1/: CMakeLists.txt  driver.cpp
templates/phase-2/: CMakeLists.txt
templates/phase-2/driver/: CMakeLists.txt  geomagicDriver.cpp  geomagicDriver.h  geomagicdriver.ini
templates/phase-2/interface/: IGeomagic.h
templates/phase-2/wrapper/: CMakeLists.txt  geomagicWrapper.cpp  geomagicWrapper.h
tests/: CMakeLists.txt  test-geomagic-force-feedback.cpp  test-geomagic-retrieve-data.cpp  test-geomagic-transformation.cpp
tests/geomagic/: CMakeLists.txt  test-geomagic-force-feedback.cpp  test-geomagic-retrieve-data.cpp  test-geomagic-transformation.cpp
tests/test-force-feedback/: CMakeLists.txt  main.cpp
tests/test-geomagic-client/: CMakeLists.txt  main.cpp
tests/test-geomagic-force-feedback/: CMakeLists.txt  main.cpp
tests/test-geomagic-retrieve-data/: CMakeLists.txt
tests/test-geomagic-transformation/: CMakeLists.txt  main.cpp
wrapper/: CMakeLists.txt  geomagicWrapper.cpp  geomagicWrapper.h  geomagicwrapper.ini  hapticdeviceWrapper.cpp  hapticdeviceWrapper.h  hapticdevicewrapper.ini
